login se conecta a base de datos y da acceso solo a recepcionistas y administradores

--- a/src/Vistas/Login.form
+++ b/src/Vistas/Login.form
@@ -163,6 +163,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Ingresar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIngresarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="pwdContrase&#xf1;a">
           <Properties>
