--- a/src/Vistas/Login.form
+++ b/src/Vistas/Login.form
@@ -58,7 +58,7 @@
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="lblNombreEmpresa" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lblUsuario" alignment="1" min="-2" max="-2" attributes="0"/>
                               <Component id="lblContraseña" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -68,6 +68,7 @@
                               <Component id="btnIngresar" pref="159" max="32767" attributes="0"/>
                               <Component id="txfUsuario" alignment="0" pref="159" max="32767" attributes="0"/>
                               <Component id="pwdContraseña" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jProgressBar1" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -92,7 +93,9 @@
                       <Component id="lblContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="pwdContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                  <Component id="jProgressBar1" min="-2" pref="4" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="btnIngresar" min="-2" pref="52" max="-2" attributes="0"/>
                   <EmptySpace pref="57" max="32767" attributes="0"/>
               </Group>
@@ -182,6 +185,11 @@
               <Color blue="59" green="4c" red="ab" type="rgb"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="pwdContrase&#xf1;aKeyPressed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JProgressBar" name="jProgressBar1">
         </Component>
       </SubComponents>
     </Container>
