--- a/src/Vistas/Login.form
+++ b/src/Vistas/Login.form
@@ -149,6 +149,7 @@
           </Properties>
           <Events>
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtUsuarioKeyPressed"/>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtUsuarioKeyReleased"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblContrase&#xf1;a">
